--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <section class="task-list">
         <h2>Tasks</h2>
 
-        <!-- <div id="tasks">
-          <div class="task">
+        <div id="tasks">
+          <!-- <div class="task">
             <div class="content">
               <input type="text" class="text" value="A new task" readonly />
             </div>
@@ -34,8 +34,8 @@
               <button class="edit">Edit</button>
               <button class="delete">Delete</button>
             </div>
-          </div>
-        </div> -->
+          </div> -->
+        </div>
       </section>
     </main>
 
